added style css external file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scrolling Navigation Display</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,8 +17,11 @@
     <a href="">Contact</a>
   </div>
   <div class="header">
-    Website Name
+    <span>Website Name</span>
   </div>
+  <br>
+  <br>
+  <br>
   <div class="content">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ratione hic sit? Dolore modi voluptates neque
       eveniet consectetur suscipit, perferendis soluta possimus accusantium esse nam ipsum amet beatae sint officiis
@@ -29,6 +33,9 @@
       Odio ex voluptas vero, sapiente dolores voluptatem nobis rem facere optio deserunt, dolorem accusantium incidunt
       fugit soluta culpa.</p>
   </div>
+  <br>
+  <br>
+  <br>
   <div class="content">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ratione hic sit? Dolore modi voluptates neque
       eveniet consectetur suscipit, perferendis soluta possimus accusantium esse nam ipsum amet beatae sint officiis
@@ -40,6 +47,9 @@
       Odio ex voluptas vero, sapiente dolores voluptatem nobis rem facere optio deserunt, dolorem accusantium incidunt
       fugit soluta culpa.</p>
   </div>
+  <br>
+  <br>
+  <br>
   <div class="content">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ratione hic sit? Dolore modi voluptates neque
       eveniet consectetur suscipit, perferendis soluta possimus accusantium esse nam ipsum amet beatae sint officiis
